package operation;

/**
 运算类

 */

public interface  Operation
{
    /**
     得到运算结果

     @return
     */
     double GetResult();




}


